[project]
name = "rift-pdf-bill-marker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "platformdirs>=4.3.7",
    "pyinstaller>=6.11.1",
    "pymupdf>=1.24.12",
    "tcl>=0.2",
    "textual>=3.2.0",
    "textual-dev>=1.7.0",
    "tk>=0.1.0",
    "tkcalendar>=1.6.1",
]
